# tester-agent

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: routes.py
backend/src/app/core/: ast_dependency_analyzer.py  dependency_graph.py  java_parser.py  logger.py  models.py  project_registry.py  project_scanner.py  project_service.py  schemas.py
backend/src/app/services/: config.py  llm_service.py
backend/src/app/utils/: path_utils.py
backend_analysis/: pyproject.toml
backend_analysis/src/app/: main.py
backend_analysis/src/app/core/: ast_dependency_analyzer.py  dependency_graph.py  java_parser.py  logger.py  models.py  project_service.py
backend_llm/: main.py  pyproject.toml
