[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langgraph>=1.0.3",
    "uvicorn>=0.38.0",
]
